<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>itdelatrisu</groupId>
	<artifactId>opsu</artifactId>
	<version>1.1.0</version>
	<properties>
		<version>${project.version}</version>
		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
		<mainClassName>itdelatrisu.opsu.Opsu</mainClassName>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<XDG>false</XDG>
		<exclude>^"..</exclude>  <!-- bogus Ant FileSet pattern to match nothing -->
	</properties>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<filtering>false</filtering>
				<directory>res</directory>
				<excludes>
					<exclude>**/Thumbs.db</exclude>
					<exclude>**/version</exclude>
				</excludes>
			</resource>
			<resource>
				<filtering>true</filtering>
				<directory>res</directory>
				<includes>
					<include>**/version</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.googlecode.mavennatives</groupId>
				<artifactId>maven-nativedependencies-plugin</artifactId>
				<version>0.0.7</version>
				<executions>
					<execution>
						<id>unpacknatives</id>
						<phase>generate-resources</phase>
						<goals>
							<goal>copy</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>run</id>
						<phase>compile</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<skip>${jar}</skip>
							<executable>java</executable>
							<arguments>
								<argument>-cp</argument>
								<classpath />
								<argument>${mainClassName}</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<filters>
						<filter>
							<!-- Overwritten classes -->
							<artifact>org.slick2d:slick2d-core</artifact>
							<excludes>
								<exclude>org/newdawn/slick/GameContainer.*</exclude>
								<exclude>org/newdawn/slick/Image.*</exclude>
								<exclude>org/newdawn/slick/Music.*</exclude>
								<exclude>org/newdawn/slick/Input.*</exclude>
								<exclude>org/newdawn/slick/Input$NullOutputStream.*</exclude>
								<exclude>org/newdawn/slick/UnicodeFont*</exclude>
								<exclude>org/newdawn/slick/gui/TextField.*</exclude>
								<exclude>org/newdawn/slick/openal/AudioInputStream*</exclude>
								<exclude>org/newdawn/slick/openal/OpenALStreamPlayer*</exclude>
								<exclude>org/newdawn/slick/openal/SoundStore*</exclude>
							</excludes>
						</filter>
						<filter>
							<!-- For FFmpeg -->
							<artifact>*:*</artifact>
							<excludes>
								<exclude>${exclude}*</exclude>
							</excludes>
						</filter>
					</filters>
					<transformers>
						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<manifestEntries>
								<Main-Class>${mainClassName}</Main-Class>
								<Use-XDG>${XDG}</Use-XDG>
							</manifestEntries>
						</transformer>
					</transformers>
					<createDependencyReducedPom>false</createDependencyReducedPom>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>repo</id>
			<releases>
				<enabled>true</enabled>
				<checksumPolicy>ignore</checksumPolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<url>file://${project.basedir}/repo</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.lwjgl.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>2.9.4-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>net.java.jinput</groupId>
					<artifactId>jinput</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.slick2d</groupId>
			<artifactId>slick2d-core</artifactId>
			<version>1.0.2</version>
			<exclusions>
				<exclusion>
					<groupId>org.lwjgl.lwjgl</groupId>
					<artifactId>lwjgl</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.jcraft</groupId>
					<artifactId>jorbis</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.jnlp</groupId>
					<artifactId>jnlp-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>net.lingala.zip4j</groupId>
			<artifactId>zip4j</artifactId>
			<version>2.11.5</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.soundlibs</groupId>
			<artifactId>jlayer</artifactId>
			<version>1.0.1.4</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.soundlibs</groupId>
			<artifactId>mp3spi</artifactId>
			<version>1.9.5.4</version>
			<exclusions>
				<exclusion>
					<groupId>com.googlecode.soundlibs</groupId>
					<artifactId>tritonus-share</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.googlecode.soundlibs</groupId>
			<artifactId>tritonus-all</artifactId>
			<version>0.3.7.2</version>
		</dependency>
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.46.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20240303</version>
		</dependency>
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna</artifactId>
			<version>5.14.0</version>
		</dependency>
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna-platform</artifactId>
			<version>5.14.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-artifact</artifactId>
			<version>3.9.8</version>
		</dependency>
		<dependency>
			<groupId>org.tukaani</groupId>
			<artifactId>xz</artifactId>
			<version>1.9</version>
		</dependency>
		<dependency>
			<groupId>net.indiespot</groupId>
			<artifactId>media</artifactId>
			<version>0.8.9</version>
		</dependency>
		<!-- Logging dependencies -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.23.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.23.1</version>
		</dependency>
	</dependencies>
</project>
